--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "bootstrap": "4.1.0",
     "magnific-popup": "^1.2.0",
     "next": "15.0.2",
-    "owl.carousel": "^2.3.4",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-owl-carousel": "^2.3.3"
+    "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
   "devDependencies": {
     "@types/node": "^20",
