--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^3.3.1",
     "@next/bundle-analyzer": "^15.0.2",
     "animate.css": "^4.1.1",
-    "aos": "^2.3.4",
+    "animate.css-react": "^1.1.0",
     "bootstrap": "4.1.0",
+    "icomoon-react": "^3.0.0",
     "magnific-popup": "^1.2.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
