--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "icomoon-react": "^3.0.0",
     "magnific-popup": "^1.2.0",
     "next": "15.0.2",
+    "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
