--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@next/bundle-analyzer": "^15.0.2",
+    "@react-google-maps/api": "^2.20.3",
     "animate.css": "^4.1.1",
     "animate.css-react": "^1.1.0",
     "bootstrap": "4.1.0",
